shows water users for each barangay

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -185,6 +185,25 @@
         </div>
       </div>
     </div>
+
+    <!--  Water User Modal -->
+    <div class="modal fade" id="waterUsersModal" tabindex="-1" aria-labelledby="waterUsersModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header bg-success text-white">
+            <h5 class="modal-title text-white" id="waterUsersModalLabel">Water Users</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="table-responsive">
+              <div id="waterUsersModalBody"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
   </div>
