standardized modal design

--- a/public/inventory-summary.html
+++ b/public/inventory-summary.html
@@ -58,8 +58,8 @@
       >
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="consumableModalLabel">Consumable Details</h5>
+            <div class="modal-header bg-info">
+              <h5 class="modal-title text-white" id="consumableModalLabel">Consumable Details</h5>
               <button
                 type="button"
                 class="btn-close btn-3d"
@@ -89,10 +89,10 @@
           <div class="modal-content shadow-lg rounded-3 small">
             
             <!-- Modal Header -->
-            <div class="modal-header flex-wrap gap-3 justify-content-between align-items-center border-bottom-0 px-4 pt-4 pb-2">
+            <div class="modal-header bg-info flex-wrap gap-3 justify-content-between align-items-center border-bottom-0 px-4 pt-4 pb-2">
               <div>
                 <h5 class="modal-title fw-semibold text-primary" id="propertyModalLabel">
-                  Property Accountability of <span id="fullName" class="text-dark"></span>
+                  Property Accountability of <span id="fullName" class="text-white"></span>
                 </h5>
               </div>
               <div class="d-flex flex-column align-items-end">
@@ -158,7 +158,6 @@
           </div>
         </div>
       </div>
-
 
     </div>
   </div>
