--- a/public/permit.html
+++ b/public/permit.html
@@ -143,9 +143,9 @@
           <div class="modal-content">
 
             <!-- Modal Header -->
-            <div class="modal-header">
-              <h5 class="modal-title" id="addPermitModalLabel">
-                <i class="bi bi-plus-circle-fill me-2 text-primary"></i> Add Water Permit
+            <div class="modal-header bg-primary">
+              <h5 class="modal-title text-white" id="addPermitModalLabel">
+                <i class="bi bi-plus-circle-fill me-2"></i> Add Water Permit
               </h5>
               <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -352,9 +352,9 @@
           <div class="modal-content">
 
             <!-- Modal Header -->
-            <div class="modal-header">
-              <h5 class="modal-title" id="editPermitModalLabel">
-                <i class="bi bi-pencil-square me-2 text-primary"></i> Edit Water Permit
+            <div class="modal-header bg-warning">
+              <h5 class="modal-title text-muted" id="editPermitModalLabel">
+                <i class="bi bi-pencil-square me-2"></i> Edit Water Permit
               </h5>
               <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -560,9 +560,9 @@
           <div class="modal-content">
 
             <!-- Modal Header -->
-            <div class="modal-header">
-              <h5 class="modal-title" id="imageUploadModalLabel">
-                <i class="bi bi-image-fill me-2 text-primary"></i> Upload and Preview Image
+            <div class="modal-header bg-primary">
+              <h5 class="modal-title text-white" id="imageUploadModalLabel">
+                <i class="bi bi-image-fill me-2"></i> Upload and Preview Image
               </h5>
               <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
