--- a/public/user-management.html
+++ b/public/user-management.html
@@ -86,8 +86,8 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content shadow rounded-3">
             <form id="addUserForm" class="needs-validation" novalidate>
-              <div class="modal-header text-white">
-                <h5 class="modal-title fw-semibold" id="addUserModalLabel">Add New User</h5>
+              <div class="modal-header bg-info">
+                <h5 class="modal-title text-white fw-semibold" id="addUserModalLabel">Add New User</h5>
                 <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
@@ -202,8 +202,8 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content shadow-lg border-0">
             <form id="editUserForm">
-              <div class="modal-header text-white">
-                <h5 class="modal-title" id="editUserModalLabel">
+              <div class="modal-header bg-info">
+                <h5 class="modal-title text-white" id="editUserModalLabel">
                   <i class="bi bi-pencil-square me-2"></i>Edit User
                 </h5>
                 <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
