--- a/public/ics.html
+++ b/public/ics.html
@@ -67,8 +67,8 @@
         <div class="modal-dialog modal-lg modal-dialog-scrollable">
           <div class="modal-content shadow-lg">
             <form id="addICSForm" class="needs-validation" novalidate>
-              <div class="modal-header text-white">
-                <h5 class="modal-title" id="addICSModalLabel">Add ICS Entry</h5>
+              <div class="modal-header bg-primary">
+                <h5 class="modal-title text-white" id="addICSModalLabel">Add ICS Entry</h5>
                 <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
@@ -185,8 +185,8 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <form id="editICSForm" class="needs-validation" novalidate>
-              <div class="modal-header text-dark">
-                <h5 class="modal-title" id="editICSModalLabel">Edit ICS Entry</h5>
+              <div class="modal-header bg-primary">
+                <h5 class="modal-title text-white" id="editICSModalLabel">Edit ICS Entry</h5>
                 <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
