--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,48 +21,152 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
 
-    <!-- Page Content -->
-  <div class="container-fluid d-flex flex-column vh-100 p-2" id="page-content">
-    <!-- Tabs Navigation -->
-    <ul class="nav nav-tabs flex-shrink-0" id="dashboardTabs" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profileTab" type="button" role="tab" aria-controls="profileTab" aria-selected="true">
-          Profile
-        </button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link .btn-3d" id="summary-tab" data-bs-toggle="tab" data-bs-target="#summaryTab" type="button" role="tab" aria-controls="summaryTab" aria-selected="false">
-          Database
-        </button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settingsTab" type="button" role="tab" aria-controls="settingsTab" aria-selected="false">
-          Account Settings
-        </button>
-      </li>
-    </ul>
+      <!-- Page Content -->
+    <div class="container-fluid d-flex flex-column vh-100 p-2" id="page-content">
+      <!-- Tabs Navigation -->
+      <ul class="nav nav-tabs flex-shrink-0" id="dashboardTabs" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profileTab" type="button" role="tab" aria-controls="profileTab" aria-selected="true">
+            About
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link .btn-3d" id="summary-tab" data-bs-toggle="tab" data-bs-target="#summaryTab" type="button" role="tab" aria-controls="summaryTab" aria-selected="false">
+            Database
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settingsTab" type="button" role="tab" aria-controls="settingsTab" aria-selected="false">
+            Account Settings
+          </button>
+        </li>
+      </ul>
 
-    <!-- Tab Content -->
-    <div class="tab-content" id="dashboardTabContent">
-      <!-- Profile Tab -->
-      <div class="tab-pane fade show active" id="profileTab" role="tabpanel" aria-labelledby="profile-tab">
-        <div class="profile-banner d-flex flex-column align-items-start p-2 rounded shadow-sm mb-1">
-          <div class="profile-info">
-            <h3 id="welcomeText" class="welcome-text mb-1"></h3>
-            <p id="userPositionText" class="user-position mb-0">Position</p>
-          </div>
+      <!-- Tab Content -->
+      <div class="tab-content" id="dashboardTabContent">
+        <!-- About Tab -->
+        <div class="tab-pane fade show active" id="profileTab" role="tabpanel" aria-labelledby="profile-tab">
+          <div class="profile-banner d-flex flex-column align-items-start p-2 rounded shadow-sm mb-1">
+            <!-- Jumbotron -->
+            <div class="container-fluid simple-water-jumbotron mt-4">
+              <div class="p-5 mb-4 rounded-3 shadow-sm">
+                <div class="container-fluid py-5">
+                  <h1 class="display-5 fw-bold">
+                    Water Resources and Utilization Section - National Capital Region
+                  </h1>
+                  <p class="col-md-8 mx-auto">
+                    The Water Resources Utilization Section (WRUS) is responsible for the conducting of water inventory for water users and sources and verifying water permits for the National Capital Region.
+                  </p>
 
-          <!-- Scorecard -->
-          <div class="scorecard-wrapper mt-3">
-            <div class="scorecard">
-              <div class="scorecard-header">
-                📝 Your Encoded Permits (Monthly)
-                <button id="refreshEncodedBtn" class="scorecard-refresh-btn" title="Refresh">
-                  <i class="bi bi-arrow-clockwise"></i>
-                </button>
+                  <div class="activities-section">
+                    <h5 class="fw-bold mb-3 text-light"> Activities - Annual Target</h5>
+                    <ul class="list-group list-group-flush col-md-6 mx-auto">
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        1. Conduct of Inventory of Water Users
+                        <span class="badge badge-3d rounded-pill bg-primary shadow-sm">220</span>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        2. Conduct of Inventory of Water Sources
+                        <span class="badge badge-3d rounded-pill bg-success shadow-sm">110</span>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        3. Mapping of Water Users and Sources
+                        <span class="badge badge-3d rounded-pill bg-info shadow-sm">1</span>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">
+                        4. Maintenance and Updating of Database for Water Users
+                        <span class="badge badge-3d rounded-pill bg-warning shadow-sm">1</span>
+                      </li>   
+                    </ul>
+                  </div>
+                </div>
               </div>
-              <div id="encodedPermitSummary" class="scorecard-list"></div>
-              <div id="noEncodedMessage" class="no-record d-none text-center">No records yet.</div>
+            </div>
+
+            <div class="container mt-4 text-center">
+              <div class="table-responsive d-inline-block">
+                <div class="table-container">
+                  <div id="yearlyWaterUserSummary" class="my-4"></div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Issuances Section -->
+            <div class="container my-5">
+              <h2 class="text-center fw-bold text-dark mb-4">Issuances</h2>
+              <p class="text-center text-dark mb-5">
+                An overview of the principal mandates of the Water Resources and Utilization Section  (National Capital Region) concerning the conducting of water inventory, identification of water users and sources, preparation of reports, and management of geospatial information.
+              </p>
+
+              <div class="row text-center">
+                <!-- Card 1 -->
+                <div class="col-md-6 mb-4">
+                  <div class="card h-100 shadow-sm border-0">
+                    <div class="card-header-banner">
+                      PD no. 1067 - Water Code of the Philippines
+                    </div>
+                    <div class="card-body d-flex flex-column">
+                      <p class="card-text flex-grow-1">
+                        Presidential Decree No. 1067, or the Water Code of the Philippines, declares all waters state-owned and regulates their use, conservation, and protection through the NWRB.
+                      </p>
+                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                          Download PDF
+                        </a>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="col-md-6 mb-4">
+                  <div class="card h-100 shadow-sm border-0">
+                    <div class="card-header-banner">
+                      NWRB Resolution No. 001-0904 - Metro Manila Critical Areas
+                    </div>
+                    <div class="card-body d-flex flex-column">
+                      <p class="card-text flex-grow-1">
+                        NWRB Resolution No. 001-0904 designates Metro Manila as a critical water area to ensure stricter regulation, conservation, and sustainable management of its water resources.
+                      </p>
+                        <a href="./files/NWRB Resolution No. 001-0904.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                          Download PDF
+                        </a>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col-md-6 mb-4">
+                  <div class="card h-100 shadow-sm border-0">
+                    <div class="card-header-banner">
+                      NWRB 15-1116 - Deputation of DENR Regional Offices on Certain Functions of Water Use Regulation
+                    </div>
+                    <div class="card-body d-flex flex-column">
+                      <p class="card-text flex-grow-1">
+                        NWRB Resolution No. 15-1116 authorizes DENR Regional Offices to assist in enforcing water use regulations by deputizing them for specific regulatory functions.
+                      </p>
+                        <a href="./files/NWRB_15-1116 - Deputation of DENR Regional Offices on Certain Functions of Water Use Regulation.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                          Download PDF
+                        </a>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="col-md-6 mb-4">
+                  <div class="card h-100 shadow-sm border-0">
+                    <div class="card-header-banner">
+                      EO 22 - Creating the Water Resources Management Office in the DENR
+                    </div>
+                    <div class="card-body d-flex flex-column">
+                      <p class="card-text flex-grow-1">
+                        Executive Order No. 22 establishes the Water Resources Management Office (WRMO) within the DENR to coordinate, integrate, and oversee the sustainable management of the country’s water resources.
+                      </p>
+                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                          Download PDF
+                        </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -77,11 +181,6 @@
             <li class="nav-item" role="presentation">
               <button class="nav-link active" id="permit-summary-tab" data-bs-toggle="tab" data-bs-target="#permitSummary" type="button" role="tab" aria-controls="permitSummary" aria-selected="true">
                 Water Permit
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button class="nav-link" id="wus-summary-tab" data-bs-toggle="tab" data-bs-target="#wusSummary" type="button" role="tab" aria-controls="wusSummary" aria-selected="false">
-                Yearly Accomplishment
               </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -104,18 +203,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Water User and Sources Summary Tab Pane -->
-            <div class="tab-pane fade" id="wusSummary" role="tabpanel" aria-labelledby="wus-summary-tab">
-              <div class="city-table-wrapper text-center my-4">
-                <div class="table-responsive d-flex justify-content-center">
-                  <div class="table-container">
-                    <div id="yearlyWaterUserSummary" class="my-4 w-100"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
             <!-- Accomplishment Per City Tab Pane -->
             <div class="tab-pane fade" id="cityAccomplishment" role="tabpanel" aria-labelledby="city-accom-tab">
               <div class="city-table-wrapper text-center my-4">
@@ -157,58 +244,55 @@
         </div>
       </div>
     </div>
-
-    <!-- Announcement Modal -->
-    <div class="modal fade water-modal" id="announcementModal" tabindex="-1" aria-labelledby="announcementModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content water-modal-content">
-          <div class="modal-header water-modal-header">
-            <h5 class="modal-title" id="announcementModalLabel">Announcement</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body water-modal-body">
-            <p id="announcementMessage">Default message</p>
-          </div>
+  </div>
+  <!-- Announcement Modal -->
+  <div class="modal fade water-modal" id="announcementModal" tabindex="-1" aria-labelledby="announcementModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content water-modal-content">
+        <div class="modal-header water-modal-header">
+          <h5 class="modal-title" id="announcementModalLabel">Announcement</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body water-modal-body">
+          <p id="announcementMessage">Default message</p>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Barangay Modal -->
-    <div class="modal fade" id="barangayModal" tabindex="-1" aria-labelledby="barangayModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-          <div class="modal-header bg-primary text-white">
-            <h5 class="modal-title text-white" id="barangayModalLabel">Barangay Breakdown</h5>
-            <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <!-- Dynamic content here -->
-            <div class="table-responsive">
-              <div id="barangayModalBody"></div>
-            </div>
-          </div>
+  <!-- Barangay Modal -->
+  <div class="modal fade" id="barangayModal" tabindex="-1" aria-labelledby="barangayModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header bg-primary text-white">
+          <h5 class="modal-title text-white" id="barangayModalLabel">Barangay Breakdown</h5>
+          <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-      </div>
-    </div>
-
-    <!--  Water User Modal -->
-    <div class="modal fade" id="waterUsersModal" tabindex="-1" aria-labelledby="waterUsersModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-          <div class="modal-header bg-success text-white">
-            <h5 class="modal-title text-white" id="waterUsersModalLabel">Water Users</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="table-responsive">
-              <div id="waterUsersModalBody"></div>
-            </div>
+        <div class="modal-body">
+          <!-- Dynamic content here -->
+          <div class="table-responsive">
+            <div id="barangayModalBody"></div>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+  <!--  Water User Modal -->
+  <div class="modal fade" id="waterUsersModal" tabindex="-1" aria-labelledby="waterUsersModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header bg-success text-white">
+          <h5 class="modal-title text-white" id="waterUsersModalLabel">Water Users</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="table-responsive">
+            <div id="waterUsersModalBody"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Map Modal -->
@@ -230,7 +314,6 @@
       </div>
     </div>
   </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
