--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -47,36 +47,38 @@
         <!-- About Tab -->
         <div class="tab-pane fade show active" id="profileTab" role="tabpanel" aria-labelledby="profile-tab">
           <div class="profile-banner d-flex flex-column align-items-start p-2 rounded shadow-sm mb-1">
+
             <!-- Jumbotron -->
             <div class="container-fluid simple-water-jumbotron mt-4">
-              <div class="p-5 mb-4 rounded-3 shadow-sm">
+              <div class="p-0 mb-4 rounded-3 shadow-sm">
                 <div class="container-fluid py-5">
+                   <img src="./images/denr logo.png" alt="DENR Logo" class="denr-logo mb-3">
                   <h1 class="display-5 fw-bold">
                     Water Resources and Utilization Section - National Capital Region
                   </h1>
-                  <p class="col-md-8 mx-auto">
-                    The Water Resources Utilization Section (WRUS) is responsible for the conducting of water inventory for water users and sources and verifying water permits for the National Capital Region.
+                  <p class="col-md-8 text-light mx-auto">
+                    The Water Resources Utilization Section (WRUS) of Licenses, Patents, and Deeds Division (LPDD) is responsible for the conducting of water inventory for water users and sources and verifying water permits for the National Capital Region.
                   </p>
 
                   <div class="activities-section">
                     <h5 class="fw-bold mb-3 text-light"> Activities - Annual Target</h5>
                     <ul class="list-group list-group-flush col-md-6 mx-auto">
                       <li class="list-group-item d-flex justify-content-between align-items-center">
-                        1. Conduct of Inventory of Water Users
+                      1. Conduct of Inventory of Water Users
                         <span class="badge badge-3d rounded-pill bg-primary shadow-sm">220</span>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center">
-                        2. Conduct of Inventory of Water Sources
+                      2. Conduct of Inventory of Water Sources
                         <span class="badge badge-3d rounded-pill bg-success shadow-sm">110</span>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center">
-                        3. Mapping of Water Users and Sources
+                      3. Mapping of Water Users and Sources
                         <span class="badge badge-3d rounded-pill bg-info shadow-sm">1</span>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center">
-                        4. Maintenance and Updating of Database for Water Users
-                        <span class="badge badge-3d rounded-pill bg-warning shadow-sm">1</span>
-                      </li>   
+                      4. Maintenance and Updating of Database for Water Users
+                        <span class="badge badge-3d rounded-pill bg-dark shadow-sm">1</span>
+                      </li>  
                     </ul>
                   </div>
                 </div>
